# mind

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
scripts/: build-server.js
src/: App.vue
src-backend/: main.py
src-backend/api/routes/: open_router.py
src-backend/utils/: port.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-python/: pyproject.toml
src/components/layouts/: Body.vue
src/components/layouts/header/: index.vue
src/composables/: useStorage.ts  useView.ts
src/utils/: const.ts
src/views/chat/: index.vue
src/views/models/: index.vue
