[project]
name = "mind-python"
version = "0.0.0"
description = "A desktop application focused on empowering the future with AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "httpx>=0.28.1",
  "langgraph>=0.5.3",
  "psutil>=7.0.0",
  "pyinstaller>=6.14.2",
  "uvicorn[standard]>=0.35.0",
]
